<resources>
    <string name="app_name">Demo</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_here">Enter here...</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="we_will_send_you_a_confirmation_code_in_this_n_number">we will send you a confirmation code in this \n number</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="_91">+91</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="login">Login</string>
    <string name="term_and_condition_amp_privacy_policy"><![CDATA[Terms and condition & privacy policy]]></string>
    <string name="money_will_be_added_to_wallet">Money will be added to wallet</string>
    <string name="proceed">Proceed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="str_my_profile">My Profile</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="enter_the_confirmation_code_sen_to">Enter the confirmation code sent to \n %s</string>
    <string name="verify">Verify</string>
    <string name="str_don_t_receive_the_otp_resend_otp">Don\'t receive the OTP ? RESEND OTP</string>
    <string name="paid_call_priority">Paid Calls Priority</string>
    <string name="international_rated">International Rates</string>
    <string name="last_weak">Dummy Card</string>
    <string name="asp_market">ASP Market</string>
    <string name="older">Calls History Horizontal</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="add_funds">Add Funds</string>
    <string name="calling_plans">Calling Plans</string>
    <string name="mobile_top_up">Mobile Top-Up</string>
    <string name="recent_call">Recent Call</string>
    <string name="str_recent_call">Recent call vertical</string>
    <string name="recharge">Recharge</string>
    <string name="call_history">Call History</string>
    <string name="sms_history">SMS History</string>
    <string name="topup_history">TopUp History</string>
    <string name="payment_history">Payment History</string>
    <string name="amount">$ Amount</string>
    <string name="str_add_money">Add Money</string>
    <string name="add_money_to_amigo_wallet">Add Money to demo Wallet</string>
    <string name="promo_code">Promo Code?</string>
    <string name="search">Search</string>
    <string name="choose_payment">Choose Payment Method</string>
    <string name="favorites">Favorites</string>
    <string name="str_asp">ASP</string>
    <string name="international">International</string>
    <string name="add_a_contact">Add a Contact</string>
    <string name="start_group">Start Group</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="anenean_massa">Anenean massa</string>
    <string name="amigo">Demo</string>
    <string name="invite">Invite</string>
    <string name="contact_to_top_up_or_enter_manually">Contact to Top-Up or Enter Manually</string>
    <string name="enter_mobile_no">Enter Mobile No</string>
    <string name="search_contact">Search Contacts</string>
    <string name="name">Name</string>
    <string name="aenean_massa">Aenean massa</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="provides_excellent_quality_using_your_cellular_minutes">Provides excellent quality using \nyour cellular minutes.</string>
    <string name="minutes">Minutes</string>
    <string name="wi_fi_calls">Wi-fi Calls</string>
    <string name="provide_excellent_quality_when_you_wi_fi_signal_is_strong_use_this_option_to_save_both_your_cellular_minutes_and_data_plan">Provide excellent quality when your Wi-Fi signal is strong Use this option to save both your cellular minutes and data plan.</string>
    <string name="reedeem_a_amigo_card">Reedeem a  Card</string>
    <string name="share_your_balance">Share Your Balance</string>
    <string name="str_payment">Payment</string>
    <string name="str_help">Help?</string>
    <string name="notification">Notification</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="funding_history">Funding History</string>
    <string name="privacy">Privacy</string>
    <string name="support">Support</string>
    <string name="contacts">Contacts</string>
    <string name="credit">Credit</string>
    <string name="coupon_or_promotion_code">Coupon or Promotion code</string>
    <string name="save_cellular_minutes_using_your_data_plan_call_quality_dependent_upon_singal_strenght_of_data_network">Save cellular minutes using your data plan call quality dependent upon singal strength of data network</string>
    <string name="str_credit_card">Credit Card</string>
    <string name="str_debit_card">Debit Card</string>
    <string name="str_other_method">Other Method</string>
    <string name="paypal">PayPal</string>
    <string name="add_new_card">Add New Card</string>
    <string name="lorem_ipsum_color_sit_amet_consectetuer_adipiscing_elit">Lorem ipsum color sit amet consectetuer adipiscing elit.</string>
    <string name="send_mobile_top_up">Send Mobile Top_Up</string>
    <string name="str_paid_call_priority">Paid Call Priority</string>
    <string name="str_profile">Profile</string>
    <string name="str_edit_profile">Edit Profile</string>
    <!-- TODO: Remove or change this placeholder text -->

<!--  For custom key board   -->
    <!-- Passcode lock -->
    <string name="digit_one">1</string>
    <!-- In the English locale, digit 1 has no text on it. This is simply empty space. If your locale has text on digit 1, then translate-->
    <string name="digit_one_text">&#8203;</string>
    <string name="digit_two">2</string>
    <string name="digit_two_text">ABC</string>
    <string name="digit_three">3</string>
    <string name="digit_three_text">DEF</string>
    <string name="digit_four">4</string>
    <string name="digit_four_text">GHI</string>
    <string name="digit_five">5</string>
    <string name="digit_five_text">JKL</string>
    <string name="digit_six">6</string>
    <string name="digit_six_text">MNO</string>
    <string name="digit_seven">7</string>
    <string name="digit_seven_text">PQRS</string>
    <string name="digit_eight">8</string>
    <string name="digit_eight_text">TUV</string>
    <string name="digit_nine">9</string>
    <string name="digit_nine_text">WXYZ</string>
    <string name="digit_zero">0</string>
    <string name="digit_zero_text">+</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="clear">Clear</string>
    <string name="logo">logo</string>
    <string name="ok">Ok</string>
    <string name="str_call">Call</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="str_email_gmail_com">Email@gmail.com</string>
    <string name="str_10_10_95">10/10/95</string>
    <string name="str_918171677877">918171677877</string>
    <string name="str_login">LOGIN</string>
    <string name="data_calls">Data Calls</string>
    <string name="str_TandC"><![CDATA[T&C]]></string>
    <string name="str_please_wait">Please wait</string>
    <string name="rahul_bharti">Rahul Bharti</string>
    <string name="_0">0</string>
    <string name="str_dummy_content">Dummy Content</string>

</resources>