<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textAlignment="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:hint="@string/_0"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@null"
                android:enabled="false"
                android:textSize="@dimen/_25sdp"
                android:focusable="false"
                android:maxLength="10"
                android:textAlignment="center" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <RelativeLayout
            android:id="@+id/customKeyBorad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/subRoot"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_below="@+id/linearLayoutCompat"
            android:background="@color/color_card_bg">



            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <LinearLayout
                        android:id="@+id/llytOne"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/numeric_button"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/digit_one"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/digit_one_text"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llytTwo"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/numeric_button"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="@string/digit_two"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:visibility="gone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/digit_two_text"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llytThree"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/numeric_button"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="@string/digit_three"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:visibility="gone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/digit_three_text"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <LinearLayout
                        android:id="@+id/llytFour"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/numeric_button"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="@string/digit_four"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:text="@string/digit_four_text"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llytFive"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/numeric_button"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="@string/digit_five"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:text="@string/digit_five_text"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llytSix"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/numeric_button"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="@string/digit_six"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:text="@string/digit_six_text"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <LinearLayout
                        android:id="@+id/llytSeven"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/numeric_button"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="@string/digit_seven"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/digit_seven_text"
                            android:visibility="gone"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llytEight"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/numeric_button"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="@string/digit_eight"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/digit_eight_text"
                            android:visibility="gone"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llytNine"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/numeric_button"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="@string/digit_nine"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:text="@string/digit_nine_text"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">


                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/ok"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_margin="@dimen/passcode_btn_margin"
                        android:background="@drawable/numeric_button"
                        android:backgroundTint="@color/white"
                        android:rotation="180"
                        android:hapticFeedbackEnabled="true"
                        android:src="@drawable/icon_right_arow"
                        android:tint="@color/color_coupon_list"
                        android:visibility="visible" />

                    <LinearLayout
                        android:id="@+id/llytZero"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/numeric_button"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="@string/digit_zero"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/digit_zero_text"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/tvDelete"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_margin="@dimen/passcode_btn_margin"
                        android:background="@drawable/numeric_button"
                        android:backgroundTint="@color/white"
                        android:contentDescription="@string/clear"
                        android:hapticFeedbackEnabled="true"
                        android:src="@drawable/icon_close"
                        android:tint="@color/red"
                     />
                </TableRow>

            </TableLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/subRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/color_card_bg">

            <Button
                android:id="@+id/btnVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:background="@drawable/border_bg"
                android:backgroundTint="@color/red"
                android:padding="@dimen/_5sdp"
                android:text="@string/str_call"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </RelativeLayout>


    </RelativeLayout>
</layout>