<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ProfileActivity">

        <include
            android:id="@+id/incld"
            layout="@layout/public_toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/incld"
            tools:layout_editor_absoluteX="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="@dimen/_100sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_margin="@dimen/_10sdp">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/edit_profilepic"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_centerInParent="true"
                    android:tint="@color/white"
                    android:src="@drawable/person"
                    android:padding="@dimen/_10sdp"
                    app:civ_border_color="@color/colorPrimary"
                    app:civ_border_width="0dp"
                    app:civ_shadow="false"
                    app:civ_shadow_radius="10"
                    tools:ignore="MissingClass" />

                <ProgressBar
                    android:id="@+id/pBarProfile"
                    android:visibility="gone"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerInParent="true" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/editprofile_choose_image"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_8sdp"
                    android:visibility="visible"
                    android:background="@drawable/circle_border_bg"
                    android:layout_alignParentEnd="true"
                    app:tint="@color/white"
                    android:tint="@color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/icon_pic" />
            </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/aenean_massa"
                    android:imeActionLabel="Next"
                    android:maxLength="30"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/mobile_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/tvMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_918171677877"
                    android:inputType="number"
                    android:maxLength="13"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_email_gmail_com"
                    android:imeActionLabel="Next"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/birthday"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/tvBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_10_10_95"
                    android:imeActionLabel="Done"
                    android:inputType="datetime"
                    android:maxLength="10"
                    android:singleLine="true" />
   <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/language"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/english"
                    android:textColor="@color/black_4"
                    android:text="@string/english"
                    android:imeActionLabel="Done"
                    android:inputType="datetime"
                    android:maxLength="10"
                    android:singleLine="true" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivArrow"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/icon_right_arow"
                        android:backgroundTint="@color/black_4"
                        android:padding="@dimen/_5sdp"
                        android:rotation="90"
                        android:tint="@color/black_4"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"/>
                </RelativeLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>